--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "author": {
     "name": "Matt Pizzimenti",
     "url": "http://mjpizz.com"
+  },
+ "virtualenv": {
+    "version": "16.0.0"
   }
 }
